# llmoji-study

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
data/: claude_descriptions.jsonl  claude_disclosure_pilot.jsonl  claude_disclosure_pilot_summary.tsv  claude_faces_embed.parquet  claude_faces_embed_description.parquet  claude_faces_quadrant_assignment_gemma_nn.tsv  claude_faces_quadrant_assignment_qwen_descriptions.tsv  claude_faces_quadrant_assignment_qwen_nn.tsv  claude_faces_quadrant_assignment_rinna_nn.tsv  claude_groundtruth_pilot.jsonl  claude_haiku_descriptions.jsonl  claude_haiku_synthesized.jsonl  claude_kaomoji.jsonl  claude_kaomoji_export.jsonl  claude_kaomoji_hook.jsonl  claude_vocab_sample.tsv  deepseek_v2_lite_pilot120.jsonl  emotional_raw.jsonl  emotional_raw_temp0.7.jsonl  emotional_summary.tsv  eriskii_axes.tsv  eriskii_clusters.tsv  eriskii_comparison.md  eriskii_per_model.tsv  eriskii_per_project.tsv  eriskii_user_kaomoji_axis_corr.tsv  face_gain_variance.tsv  face_gain_variance_bootstrap.tsv  face_h_first_rinna.parquet  face_likelihood_cross_emit_sanity.md  face_likelihood_cross_emit_sanity.tsv  face_likelihood_ensemble_predict.md  face_likelihood_ensemble_predict.tsv  face_likelihood_ensemble_predict_claude_gt.md  face_likelihood_ensemble_predict_claude_gt.tsv  face_likelihood_gemma.parquet  face_likelihood_gemma_summary.tsv  face_likelihood_gemma_v7primed.parquet  face_likelihood_gemma_v7primed_summary.tsv  face_likelihood_gemma_vs_qwen.md  (+113 more)
docs/: 2026-04-27-llmoji-package.md  2026-04-30-v3-ministral-pilot.md  2026-05-01-rule3-redesign.md  2026-05-02-claude-disclosure-pilot.md  2026-05-02-face-likelihood.md  2026-05-02-introspection-pilot.md  2026-05-02-llmoji-v2.md  2026-05-03-cleanliness-pilot.md  2026-05-03-face-likelihood-ensemble.md  2026-05-03-prompt-cleanliness.md  2026-05-03-temp-smoke.md  2026-05-04-claude-groundtruth-pilot.md  2026-05-04-handoff-introspection-v4.md  2026-05-04-introspection-v7-and-haiku.md  2026-05-04-rinna-jpfull-topk.md  2026-05-05-residual-state-axes.md  2026-05-05-residual-state-axes_gt_only.md  2026-05-05-soft-everywhere-methodology.md  2026-05-06-use-read-act-channels.md  findings.md  gotchas.md  handoff-2026-05-03.md  harness-side.md  internals.md  local-side.md  previous-experiments.md
llmoji/: __init__.py  analysis.py  backfill_journals.py  capture.py  claude_code_source.py  claude_export_source.py  claude_faces.py  claude_hook_source.py  claude_scrape.py  config.py  cross_pilot_analysis.py  emotional_analysis.py  emotional_prompts.py  eriskii.py  eriskii_prompts.py  hidden_capture.py  hidden_state_analysis.py  hidden_state_io.py  prompts.py  taxonomy.py
llmoji_study/: __init__.py  analysis.py  capture.py  claude_faces.py  claude_gt.py  config.py  eriskii.py  (+16 more)
(+331 files in other folders)
