[project]
name = "llmoji"
version = "0.0.1"
description = "Does kaomoji choice track internal state in local LMs?"
requires-python = ">=3.11"
dependencies = [
    "saklas>=1.4.6",
    "anthropic",
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "pandas",
    "sentence-transformers",
    "pyarrow",
    "plotly",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llmoji"]
